<resources>
    <string name="app_name">TECPLUS</string>
    <string name="title_information">INFORMAÇÕES</string>
    <string name="title_location">LOCALIZAÇÃO</string>
    <string name="title_contact">CONTATO</string>
    <string name="title_location_desc">Informações de localização da instituição</string>
    <string name="title_contact_desc">Informações de contato da instituição</string>
    <string name="title_information_desc">Informações gerais da instituição</string>
    <string name="email">Por favor, informe um email</string>
    <string name="telephone">Por favor, informe um telefone</string>
    <string name="button_label_enabled">GRAVAR</string>
    <string name="cep">Por favor, informe o número do CEP</string>
    <string name="number">Por favor, informe o número do local</string>
    <string name="complement">Por favor, informe um complemento</string>
    <string name="textCep">CEP</string>
    <string name="textNumber">NÚMERO</string>
    <string name="textComplement">COMPLEMENTO</string>
    <string name="textPhone">TELEFONE</string>
    <string name="textMail">EMAIL</string>
</resources>
